[gd_scene load_steps=2 format=3 uid="uid://duel53lux822x"]

[ext_resource type="Script" path="res://addons/dialogarithm/editor/scripts/headerOptions.gd" id="1_xfnf2"]

[node name="DisplayTextBlock" type="MarginContainer"]
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2
script = ExtResource("1_xfnf2")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
text = "Block Instruction"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MoveUp" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 0
text = "Move Up"
expand_icon = true

[node name="MoveDown" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 0
text = "Move Down"
expand_icon = true

[node name="Duplicate" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 0
text = "Duplicate"
expand_icon = true

[node name="Delete" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 0.356863, 0.345098, 1)
text = "Delete"
expand_icon = true

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Header/MoveUp" to="." method="moveUp"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Header/MoveDown" to="." method="moveDown"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Header/Duplicate" to="." method="duplicateBlock"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Header/Delete" to="." method="delete"]
